tests/fixtures/errors/bare_record_missing_args.z
# E0300: bare-name construction of a record with required fields.
pt: record {
    x: i64
    y: i64
}

main: function is {
    p: pt
    print "\{p.x}"
}
